# nobridge

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build-tests.sh  build.sh  test.sh
apps/CLI/: CMakeLists.txt  main.cpp
build-tests/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja
build-tests/Testing/Temporary/: CTestCostData.txt
build-tests/apps/CLI/: nobridge
build-tests/tests/: CTestTestfile.cmake  pbntests  pbntests[1]_include.cmake  pbntests[1]_tests.cmake
doc/: pbn-v2.1.txt
modules/adapter/: CMakeLists.txt
modules/adapter/include/: adapter.h
modules/adapter/src/: adapter.cpp
modules/engine/: CMakeLists.txt
modules/engine/include/: auction.h  bid.h  bidengine.h  bridgeengine.h  card.h  contract.h  deck.h  decl.h  engine.h  game.h  hand.h  helpers.h  play.h  playengine.h  player.h  score.h  scoreengine.h  trick.h  types.h
modules/engine/src/: bid.cpp  bidengine.cpp  bridgeengine.cpp  card.cpp  contract.cpp  deck.cpp  engine.cpp  game.cpp  hand.cpp  helpers.cpp  play.cpp  playengine.cpp  player.cpp  score.cpp  scoreengine.cpp  trick.cpp
modules/mika/: CMakeLists.txt
modules/mika/include/: mika.h  vect.h
modules/mika/src/: mika.cpp
modules/mkrl/: CMakeLists.txt
modules/mkrl/include/: mkrl.h  vect.h
modules/mkrl/src/: mkrl.cpp
modules/pbn/: CMakeLists.txt
modules/pbn/include/: auction.h  deal.h  game.h  parser.h  pbn.h  play.h  reader.h
modules/pbn/src/: parser.cpp  pbn.cpp  reader.cpp
modules/pbnlib/: CMakeLists.txt
modules/pbnlib/include/: auction.h  deal.h  game.h  pbn.h  play.h  reader.h  writer.h
modules/pbnlib/src/: reader.cpp
modules/storage/: CMakeLists.txt
modules/storage/include/: bidt.h  cardt.h  gamerec.h  handrec.h  handt.h  handvec.h  playrec.h  playt.h  storage.h  vector.h
modules/storage/src/: handt.cpp  handvec.cpp  storage.cpp  vector.cpp
modules/vmath/: CMakeLists.txt
modules/vmath/include/: hnsw.h  vmath.h
modules/vmath/src/: vmath.cpp
src/: CMakeLists.txt  bid.cpp  bid.h  bidengine.cpp  bidengine.h  bridgeengine.cpp  bridgeengine.h  card.cpp  card.h  contract.cpp  contract.h  deck.cpp  deck.h  main.cpp  playengine.cpp  playengine.h  player.cpp  player.h  scoreengine.cpp  scoreengine.h  trick.cpp  trick.h
tests/: CMakeLists.txt  test_engine.cpp  test_pbn.cpp  test_storage.cpp  test_vectors.cpp
tests/files/: RB_220702123558SistaChansen_full.pbn.txt
