cmake_minimum_required(VERSION 4.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED true)
set(CMAKE_CXX_COMPILER "/usr/bin/clang++")

project (nobridge
  VERSION 0.1.0
  DESCRIPTION "Bridge Robot"
  LANGUAGES CXX
)

set(EXECUTABLE_OUTPUT_PATH "bin")
add_executable(nobridge)
add_subdirectory(src)
